# pantheon-files-plugin-googledrive

./: CMakeLists.txt  COMPILE  googledrive.plug  plugin.c  plugin.h  plugin.vala
